--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -154,7 +154,7 @@
                             <a href="/admin/logout" class="btn btn-outline-primary mx-3 mt-2 d-block">Logout</a>
                             </div>
                         </div>
-                        </li>Fuser
+                        </li>
                     </ul>
                     </div>
                 </nav>
@@ -168,6 +168,8 @@
             <!--  Main wrapper ends -->
         </div>
     </div>
+    <script src="/assets/js/notify.js"></script>
+    <script src="/assets/js/notify.min.js"></script>
     <script src="/assets/libs/jquery/dist/jquery.min.js"></script>
     <script src="/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/sidebarmenu.js"></script>
