--- a/views/public/signup.ejs
+++ b/views/public/signup.ejs
@@ -10,7 +10,13 @@
                         <% if (locals.status === "success") { %>
                             <div class="alert alert-success" role="alert">
                                 <%= locals.msg %>
+                                <p>Login</p>
                             </div>
+                            <script>
+                                setTimeout(()=>{
+                                  window.location.href = "http://127.0.0.1:3000/login"; 
+                                },800)
+                            </script>
                         <% } if(locals.status === "error"){ %>
                             <div class="alert alert-danger" role="alert">
                                 <%= locals.msg %>
@@ -53,6 +59,6 @@
             </div>
         </div>
     </div>
-<script src="assets/js/signupValidate.js"></script>
+<script src="assets/js/validate.js"></script>
 <!-- include footer -->
 <%- include('./includes/footer') %>
