--- a/views/public/signup.ejs
+++ b/views/public/signup.ejs
@@ -40,7 +40,7 @@
                                 </div>
                                 <div class="mb-2">
                                     <label for="mobile" id="mobileLabel" class="form-label">Mobile</label>
-                                    <input type="text" class="form-control" id="mobile" name="mobileNumber" placeholder="mobile" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Mobile'">				
+                                    <input type="text" class="form-control" id="mobileNumber" name="mobileNumber" placeholder="mobile" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Mobile'">				
                                 </div>
                                 <div class="mb-2">
                                     <label for="password" id="passwordLabel" class="form-label">Password</label>
@@ -51,6 +51,7 @@
                                     <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Confirm Password'">				
                                 </div>
                                 <button class="btn btn-warning w-100 py-8 fs-4 mb-4 rounded-2">Submit</button>
+                                <a href="/login" style="padding-left: 95px;">login to your Account</a>
                                 </form>
                             </div>
                         </div>
