--- a/views/admin/adminlogin.ejs
+++ b/views/admin/adminlogin.ejs
@@ -21,15 +21,34 @@
             <div class="card mb-0">
               <div class="card-body">
                 <a href="/" class="text-nowrap logo-img text-center d-block py-3 w-100">
-                  <img src="../assets/images/logos/dark-logo.svg" width="180" alt="">
+                  <img src="/assets/img/logo.png" width="80" style="border-radius: 50%;"  alt="">
                 </a>
-                <form action="/admin/auth" method="post">
+                <% if (locals.status === "success") { %>
+                    <div class="alert alert-success" role="alert">
+                        <%= locals.msg %>
+                    </div>
+                    <script>
+                      setTimeout(()=>{
+                        window.location.href = "http://127.0.0.1:3000/admin/users"; 
+                      },800)
+                    </script>
+                <% } if(locals.status === "error"){ %>
+                    <div class="alert alert-danger" role="alert">
+                        <%= locals.msg %>
+                    </div>
+                    <script>
+                      setTimeout(()=>{
+                        window.location.href = "http://127.0.0.1:3000/admin/users"; 
+                      },800)
+                    </script>
+                <% } %>
+                <form action="/admin/auth" method="POST" onsubmit="return admnloginValidate()">
                   <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Username</label>
+                    <label for="adminEmail" id="adminEmailLabel" class="form-label">Email Id</label>
                     <input type="email" name="adminEmail" class="form-control" id="adminEmail" aria-describedby="emailHelp">
                   </div>
                   <div class="mb-4">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                    <label for="adminPassword" id="adminPasswordLabel" class="form-label">Password</label>
                     <input type="password" name="adminPassword" class="form-control" id="adminPassword">
                   </div>
                   <div class="d-flex align-items-center justify-content-between mb-4">
@@ -48,4 +67,5 @@
   </div>
 </body>
 
+<script src="/assets/js/adminValidate.js"></script>
 </html>
