--- a/views/admin/category/edit.ejs
+++ b/views/admin/category/edit.ejs
@@ -1,6 +1,25 @@
 <!--  Header End -->
 <div class="container-fluid"></div>
     <div class="card">
+        <% if (locals.status === "success") { %>
+            <div class="alert alert-success" role="alert">
+                <%= locals.msg %>
+            </div>
+            <script>
+              setTimeout(()=>{
+                window.location.href = "http://127.0.0.1:3000/admin/category"; 
+              },800)
+            </script>
+        <% } if(locals.status === "error"){ %>
+            <div class="alert alert-danger" role="alert">
+                <%= locals.msg %>
+            </div>
+            <!-- <script>
+              setTimeout(()=>{
+                window.location.href = "http://127.0.0.1:3000/admin/category"; 
+              },800)
+            </script> -->
+        <% } %>
         <div class="card-body">
             <h5 class="card-title fw-semibold mb-4 float-start">Edit Category</h5>
             <button type="button" onclick="history.back(-1)" class="btn btn-outline-primary float-end">
@@ -15,17 +34,17 @@
                 <% if (!locals.category) { %>
                     <p>can not edit the Category</p>
                 <% }else{ %>
-                    <form action="/admin/updatecategory" method="POST">
+                    <form action="/admin/updatecategory" method="POST" onsubmit="return categoryValidate()">
                         <div class="row">
                             <div class="col-xl-6 text-dark">
                             <div class="form-floating mb-3">
                                 <input type="hidden" class="form-control border-dark" name="categoryId" id="categoryId" placeholder="category Id" value="<%= category._id %>">
                                 <input type="text" class="form-control border-dark" name="updateCategoryName" id="updateCategoryName" placeholder="category Name" value="<%= category.categoryName %>">
-                                <label for="categoryName">Category Name*</label>
+                                <label for="categoryName" id="categoryLabel">Category Name*</label>
                             </div>
                             <div class="gap-2 col-3 mx-auto d-flex justify-content-center text-center my-5">
-                                <button type="button" class="btn btn-danger float-start">Cancel</button>
-                                <button type="button" class="btn btn-primary gap-2">Reset</button>
+                                <!-- <button type="button" class="btn btn-danger float-start">Cancel</button>
+                                <button type="button" class="btn btn-primary gap-2">Reset</button> -->
                                 <button type="submit" class="btn btn-success float-end">Update</button>
                             </div>
                             </div>
@@ -37,3 +56,17 @@
         </div>
     </div>
 </div>
+
+<script>
+    function categoryValidate(){
+        const updateCategoryName = document.getElementsByName("updateCategoryName")[0];
+        if (updateCategoryName.value.trim() === "") {
+            const categoryLabel = document.getElementById("categoryLabel")
+            categoryLabel.innerHTML = "Category Required"
+            categoryLabel.style.color = "red"
+            updateCategoryName.focus();
+            return false;
+        }
+        return true
+    }
+</script>
