--- a/views/admin/food/create.ejs
+++ b/views/admin/food/create.ejs
@@ -12,17 +12,39 @@
             </button>
             <div class="card w-100">
             <div class="card-body p-0">
-                <form action="/admin/saveFood" method="POST" enctype="multipart/form-data">
+                  <% if (locals.status === "success") { %>
+                      <div class="alert alert-success" role="alert">
+                          <%= locals.msg %>
+                      </div>
+                      <script>
+                        setTimeout(()=>{
+                          window.location.href = "http://127.0.0.1:3000/admin/food"; 
+                        },800)
+                      </script>
+                  <% } if(locals.status === "error"){ %>
+                      <div class="alert alert-danger" role="alert">
+                          <%= locals.msg %>
+                      </div>
+                      <!-- <script>
+                        setTimeout(()=>{
+                          window.location.href = "http://127.0.0.1:3000/admin/food"; 
+                        },800)
+                      </script> -->
+                  <% } %>
+                <form action="/admin/saveFood" method="POST" enctype="multipart/form-data" onsubmit="return foodValidate()">
                     <div class="row">
-                        <div class="col-xl-6 text-dark">
-                            <div class="form-floating mb-3">
-                                <input type="file" class="form-control border-dark" name="foodImage" id="foodImage" placeholder="Select an image">
-                                <label for="foodImage">Image*</label>
-                              </div>
-                              <div class="form-floating mb-3">
-                                <input type="text" class="form-control border-dark" name="foodName" id="foodName" placeholder="Food Name">
-                                <label for="foodName">Food Name*</label>
-                              </div>
+                      <div class="col-xl-6 text-dark">
+                          <div class="form-floating mb-3">
+                            <input type="file" class="form-control border-dark" name="foodImage" id="fileInput" placeholder="Select an image" required>
+                            <label for="foodImage" id="foodImageLabel">Image*</label>
+                          </div>
+                          <div class="form-floating mb-3">
+                            <input type="text" class="form-control border-dark" name="foodName" id="foodName" placeholder="Food Name">
+                            <label for="foodName" id="foodNameLabel">Food Name*</label>
+                          </div>
+                          <div class="file-preview" id="previewContainer">
+                            <img class="preview-image" id="previewImage" src="/no-image.jpg" alt="File Preview">
+                          </div>
                         </div>
                         <div class="col-xl-6 text-dark">
                             <div class="form-floating mb-3">
@@ -34,7 +56,7 @@
                                     <option value="<%= item.categoryName %>"><%= item.categoryName %></option>
                                   <% }) } %>
                                 </select>
-                                <label for="Categories">Categories*</label>
+                                <label for="Categories" id="categoriesLabel">Categories*</label>
                               </div>
                               <div class="form-floating mb-3">
                                 <select class="form-select border-dark" name="foodType" id="foodType" aria-label="Food Type">
@@ -42,29 +64,27 @@
                                   <option value="1">Veg</option>
                                   <option value="0">Non-Veg</option>
                                 </select>
-                                <label for="foodType">Type*</label>
+                                <label for="foodType" id="foodTypeLabel">Type*</label>
                               </div>
                               <div class="form-floating mb-3">
                                 <input type="text" class="form-control border-dark" name="orgPrice" id="orgPrice" placeholder="Original Price">
-                                <label for="orgPrice">Original Price*</label>
+                                <label for="orgPrice" id="orgPriceLabel">Original Price*</label>
                               </div>
                               <div class="form-floating mb-3">
                                 <input type="text" class="form-control border-dark" name="discPrice" id="discPrice" placeholder="Discount Price">
-                                <label for="discPrice">Discount Price*</label>
+                                <label for="discPrice" id="discPriceLabel">Discount Price*</label>
                               </div>
                               <div class="form-floating mb-3">
                                 <textarea class="form-control border-dark" style="height: 100px" placeholder="Description..." name="foodDescription" id="foodDescription"></textarea>
-                                <label for="foodDescription">Description*</label>
+                                <label for="foodDescription" id="foodDescriptionLabel">Description*</label>
                               </div>
                               <div class="form-floating mb-3">
                                 <textarea class="form-control border-dark" style="height: 100px" placeholder="Ingredients..." name="foodIngredients" id="foodIngredients"></textarea>
-                                <label for="foodIngredients">Ingredients*</label>
+                                <label for="foodIngredients" id="foodIngredientsLabel">Ingredients*</label>
                               </div>
                         </div>
                     </div>
                     <div class="gap-2 col-3 mx-auto d-flex justify-content-center text-center my-5">
-                        <button type="button" class="btn btn-danger float-start">Cancel</button>
-                        <button type="button" class="btn btn-primary gap-2">Reset</button>
                         <button type="submit" class="btn btn-success float-end">Submit</button>
                       </div>
                 </form>
@@ -73,3 +93,5 @@
         </div>
     </div>
 </div>
+<script src="/assets/js/validateFood.js"></script>
+<script src="/assets/js/filePreview.js"></script>
