--- a/views/admin/food/edit.ejs
+++ b/views/admin/food/edit.ejs
@@ -12,19 +12,38 @@
             </button>
             <div class="card w-100">
             <div class="card-body p-0">
+              <% if (locals.status === "success") { %>
+                  <div class="alert alert-success" role="alert">
+                      <%= locals.msg %>
+                  </div>
+                  <script>
+                    setTimeout(()=>{
+                      window.location.href = "http://127.0.0.1:3000/admin/food"; 
+                    },800)
+                  </script>
+              <% } if(locals.status === "error"){ %>
+                  <div class="alert alert-danger" role="alert">
+                      <%= locals.msg %>
+                  </div>
+                  <!-- <script>
+                    setTimeout(()=>{
+                      window.location.href = "http://127.0.0.1:3000/admin/food"; 
+                    },800)
+                  </script> -->
+              <% } %>
               <% if (locals.food) { %>
-                <form action="/admin/updateFood" method="post" enctype="multipart/form-data">
+                <form action="/admin/updateFood" method="post" enctype="multipart/form-data" onsubmit="return foodUpdateValidate()">
                   <div class="row">
                     <div class="col-xl-6 text-dark">
                       <input type="hidden" name="foodId" id="foodId" value="<%= food._id %>"> 
                       <input type="hidden" name="prevImage" id="prevImage" value="<%= food.image %>"> 
                       <div class="form-floating mb-3">
                         <input type="text" class="form-control border-dark" name="foodName" id="foodName" placeholder="Food Name" value="<%= food.foodName %>">
-                        <label for="foodName">Food Name*</label>
+                        <label for="foodName" id="foodNameLabel">Food Name*</label>
                       </div>
                       <div class="form-floating mb-3">
                           <input type="file" class="form-control border-dark" name="foodImage" id="fileInput" placeholder="Select an image">
-                          <label for="foodImage">Image*</label>
+                          <label for="foodImage" id="foodImageLabel">Image*</label>
                       </div>
                       <div class="file-preview" id="previewContainer">
                         <img class="preview-image" id="previewImage" src="/food/<%= food.image %>" alt="File Preview">
@@ -41,7 +60,7 @@
                                 <option value="<%= item.categoryName %>" <%= (item.categoryName === food.category) ? "selected" : " " %> ><%= item.categoryName %></option>
                               <% }) } %>
                             </select>
-                            <label for="Categories">Categories*</label>
+                            <label for="Categories" id="categoriesLabel">Categories*</label>
                           </div>
                           <div class="form-floating mb-3">
                             <select class="form-select border-dark" name="foodType" id="foodType" aria-label="Food Type">
@@ -49,29 +68,27 @@
                               <option value="1" <%= (food.type === 1) ? "selected" : " " %>>Veg</option>
                               <option value="0" <%= (food.type === 0) ? "selected" : " " %>>Non-Veg</option>
                             </select>
-                            <label for="foodType">Type*</label>
+                            <label for="foodType" id="foodTypeLabel">Type*</label>
                           </div>
                           <div class="form-floating mb-3">
                             <input type="text" class="form-control border-dark" name="orgPrice" id="orgPrice" placeholder="Original Price" value="<%= food.orgPrice %>">
-                            <label for="orgPrice">Original Price*</label>
+                            <label for="orgPrice" id="orgPriceLabel">Original Price*</label>
                           </div>
                           <div class="form-floating mb-3">
                             <input type="text" class="form-control border-dark" name="discPrice" id="discPrice" placeholder="Discount Price" value="<%= food.discPrice %>">
-                            <label for="discPrice">Discount Price*</label>
+                            <label for="discPrice" id="discPriceLabel">Discount Price*</label>
                           </div>
                           <div class="form-floating mb-3">
-                            <textarea class="form-control border-dark" style="height: 100px" placeholder="Description..." id="foodDescription"><%= food.description %></textarea>
-                            <label for="foodDescription">Description*</label>
+                            <textarea class="form-control border-dark" style="height: 100px" name="foodDescription" placeholder="Description..." id="foodDescription"><%= food.description %></textarea>
+                            <label for="foodDescription" id="foodDescriptionLabel">Description*</label>
                           </div>
                           <div class="form-floating mb-3">
-                            <textarea class="form-control border-dark" style="height: 100px" placeholder="Ingredients..." id="foodIngredients"><%= food.ingredients %></textarea>
-                            <label for="foodIngredients">Ingredients*</label>
+                            <textarea class="form-control border-dark" style="height: 100px" name="foodIngredients" placeholder="Ingredients..." id="foodIngredients"><%= food.ingredients %></textarea>
+                            <label for="foodIngredients" id="foodIngredientsLabel">Ingredients*</label>
                           </div>
                     </div>
                     </div>
                     <div class="gap-2 col-3 mx-auto d-flex justify-content-center text-center my-5">
-                        <button type="button" class="btn btn-danger float-start">Cancel</button>
-                        <button type="button" class="btn btn-primary gap-2">Reset</button>
                         <button type="submit" class="btn btn-success float-end">Submit</button>
                       </div>
                 </form>
@@ -83,5 +100,5 @@
         </div>
     </div>
 </div>
-//file preview js file
+<script src="/assets/js/validateFood.js"></script>
 <script src="/assets/js/filePreview.js"></script>
