--- a/views/public/includes/header.ejs
+++ b/views/public/includes/header.ejs
@@ -40,7 +40,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <!-- logo -->
       <a href="/" class="logo d-flex align-items-center">
-        <!-- <img src="../assets/img/logo.png" alt=""> -->
+        <img src="../assets/img/logo.png" class="rounded-circle" alt="logo">
         <h1>FoodIn</h1>
       </a>
       <nav id="navbar" class="navbar">
