final commitw week 11 after bug fix

--- a/views/admin/adminlogin.ejs
+++ b/views/admin/adminlogin.ejs
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Modernize Free</title>
-  <link rel="shortcut icon" type="image/png" href="../assets/images/logos/favicon.png" />
+  <title>foodin Admin Panel</title>
+  <link rel="shortcut icon" type="image/png" href="../assets/img/logo.png" />
   <link rel="stylesheet" href="../assets/css/styles.min.css" />
 </head>
 
@@ -21,7 +21,7 @@
             <div class="card mb-0">
               <div class="card-body">
                 <a href="/" class="text-nowrap logo-img text-center d-block py-3 w-100">
-                  <img src="/assets/img/logo.png" width="80" style="border-radius: 50%;"  alt="">
+                  <img src="/assets/img/logo.png" width="80" style="border-radius: 50%;"  alt="logo">
                 </a>
                 <% if (locals.status === "success") { %>
                     <div class="alert alert-success" role="alert">
