--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -93,6 +93,6 @@
                 </div>
             </div>
             <div class="py-6 px-6 text-center">
-                <p class="mb-0 fs-4">Design and Developed by <a href="https://adminmart.com/" target="_blank" class="pe-1 text-primary text-decoration-underline">AdminMart.com</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a></p>
+                <p class="mb-0 fs-4">Design and Developed by <a href="http://127.0.0.1/" target="_blank" class="pe-1 text-primary text-decoration-underline">foodin</a> Distributed by <a href="http://127.0.0.1">foodin</a></p>
             </div>
 
