--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Modernize Free</title>
-    <link rel="shortcut icon" type="image/png" href="./assets/images/logos/favicon.png" />
+    <title>Foodin Admin Panel</title>
+    <link rel="shortcut icon" type="image/png" href="/assets/img/logo.png" />
     <link rel="stylesheet" href="/assets/css/styles.min.css" />
     <link href="/assets/css/custom/customstyle.css" rel=" stylesheet">
 </head>
@@ -17,8 +17,9 @@
             <!-- Sidebar scroll-->
             <div>
                 <div class="brand-logo d-flex align-items-center justify-content-between">
-                    <a href="./index.html" class="text-nowrap logo-img">
-                        <img src="../assets/images/logos/dark-logo.svg" width="180" alt="" />
+                    <a href="/" class="text-nowrap logo-img">
+                        <img src="/assets/img/logo.png" width="36" style="border-radius: 50%;"  alt="logo">
+                        <span style="font-size: 20px; color: black; font-weight: bold; line-height: 70px;" class="px-2 py-3">Foodin</span>
                     </a>
                     <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
                         <i class="ti ti-x fs-8"></i>
