--- a/views/public/includes/footer.ejs
+++ b/views/public/includes/footer.ejs
@@ -1,48 +1,42 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
-
     <div class="footer-content">
       <div class="container">
-
         <div class="row g-5">
           <div class="col-lg-4">
-            <h3 class="footer-heading">About ZenBlog</h3>
+            <h3 class="footer-heading">About foodin</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ab, perspiciatis beatae autem deleniti voluptate nulla a dolores, exercitationem eveniet libero laudantium recusandae officiis qui aliquid blanditiis omnis quae. Explicabo?</p>
-            <p><a href="about.html" class="footer-link-more">Learn More</a></p>
           </div>
           <div class="col-6 col-lg-2">
             <h3 class="footer-heading">Navigation</h3>
             <ul class="footer-links list-unstyled">
-              <li><a href="index.html"><i class="bi bi-chevron-right"></i> Home</a></li>
-              <li><a href="index.html"><i class="bi bi-chevron-right"></i> Blog</a></li>
-              <li><a href="category.html"><i class="bi bi-chevron-right"></i> Categories</a></li>
-              <li><a href="single-post.html"><i class="bi bi-chevron-right"></i> Single Post</a></li>
-              <li><a href="about.html"><i class="bi bi-chevron-right"></i> About us</a></li>
-              <li><a href="contact.html"><i class="bi bi-chevron-right"></i> Contact</a></li>
+              <li><a href="#"><i class="bi bi-chevron-right"></i> Home</a></li>
+              <li><a href="#"><i class="bi bi-chevron-right"></i> Categories</a></li>
+              <li><a href="#"><i class="bi bi-chevron-right"></i> Post</a></li>
+              <li><a href="#"><i class="bi bi-chevron-right"></i> About us</a></li>
+              <li><a href="#"><i class="bi bi-chevron-right"></i> Contact</a></li>
             </ul>
           </div>
           <div class="col-6 col-lg-2">
             <h3 class="footer-heading">Categories</h3>
             <ul class="footer-links list-unstyled">
-              <li><a href="category.html"><i class="bi bi-chevron-right"></i> Business</a></li>
-              <li><a href="category.html"><i class="bi bi-chevron-right"></i> Culture</a></li>
-              <li><a href="category.html"><i class="bi bi-chevron-right"></i> Sport</a></li>
-              <li><a href="category.html"><i class="bi bi-chevron-right"></i> Food</a></li>
-              <li><a href="category.html"><i class="bi bi-chevron-right"></i> Politics</a></li>
-              <li><a href="category.html"><i class="bi bi-chevron-right"></i> Celebrity</a></li>
-              <li><a href="category.html"><i class="bi bi-chevron-right"></i> Startups</a></li>
-              <li><a href="category.html"><i class="bi bi-chevron-right"></i> Travel</a></li>
-
+              <% 
+                if (locals.categories) { 
+                  categories.forEach((item)=>{
+              %>
+                <li><a href="categories/<%= item.categoryName %>"><i class="bi bi-chevron-right"></i> <%= item.categoryName %></a></li>
+              <% }) }else{ %>
+                <p class="text-secondary">No products to display</p>
+              <% } %>
             </ul>
           </div>
 
           <div class="col-lg-4">
             <h3 class="footer-heading">Recent Posts</h3>
-
             <ul class="footer-links footer-blog-entry list-unstyled">
               <li>
-                <a href="single-post.html" class="d-flex align-items-center">
+                <a href="#" class="d-flex align-items-center">
                   <img src="../assets/img/post-sq-1.jpg" alt="" class="img-fluid me-3">
                   <div>
                     <div class="post-meta d-block"><span class="date">Culture</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
@@ -52,7 +46,7 @@
               </li>
 
               <li>
-                <a href="single-post.html" class="d-flex align-items-center">
+                <a href="#" class="d-flex align-items-center">
                   <img src="../assets/img/post-sq-2.jpg" alt="" class="img-fluid me-3">
                   <div>
                     <div class="post-meta d-block"><span class="date">Culture</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
@@ -62,17 +56,17 @@
               </li>
 
               <li>
-                <a href="single-post.html" class="d-flex align-items-center">
+                <a href="#" class="d-flex align-items-center">
                   <img src="../assets/img/post-sq-3.jpg" alt="" class="img-fluid me-3">
                   <div>
                     <div class="post-meta d-block"><span class="date">Culture</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
-                    <span>Life Insurance And Pregnancy: A Working Mom’s Guide</span>
+                    <span>Life Insurance And Pregnancy: A Working Mom's Guide</span>
                   </div>
                 </a>
               </li>
 
               <li>
-                <a href="single-post.html" class="d-flex align-items-center">
+                <a href="#" class="d-flex align-items-center">
                   <img src="../assets/img/post-sq-4.jpg" alt="" class="img-fluid me-3">
                   <div>
                     <div class="post-meta d-block"><span class="date">Culture</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
@@ -90,10 +84,10 @@
         <div class="row justify-content-between">
           <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
             <div class="copyright">
-              © Copyright <strong><span>ZenBlog</span></strong>. All Rights Reserved
+              © Copyright <strong><span>foodin</span></strong>. All Rights Reserved
             </div>
             <div class="credits">
-              Designed by <a href="#">foodin</a>
+              Designed by <a href="http://127.0.0.1:3000/">foodin</a>
             </div>
           </div>
           <div class="col-md-6">
