--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -10,54 +10,51 @@
 						<div class="swiper sliderFeaturedPosts">
 							<div class="swiper-wrapper">
 								<div class="swiper-slide">
-									<a href="single-post.html" class="img-bg d-flex align-items-end"
+									<a href="#" class="img-bg d-flex align-items-end"
 										style="background-image: url('assets/img/post-slide-1.jpg');">
 										<div class="img-bg-inner">
-											<h2>The Best Homemade Masks for Face (keep the Pimples Away)</h2>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem neque
-												est mollitia! Beatae minima assumenda repellat harum vero, officiis
-												ipsam magnam obcaecati cumque maxime inventore repudiandae quidem
-												necessitatibus rem atque.</p>
+											<h2>Savor the Flavors of Nature</h2>
+											<p>Explore a world of gastronomic wonders with our handpicked collection of farm-fresh ingredients and artisanal recipes. Elevate your culinary journey and embrace the rich tapestry of flavors found in nature's finest offerings.</p>
 										</div>
 									</a>
 								</div>
 
 								<div class="swiper-slide">
-									<a href="single-post.html" class="img-bg d-flex align-items-end"
+									<a href="#" class="img-bg d-flex align-items-end"
 										style="background-image: url('assets/img/post-slide-2.jpg');">
 										<div class="img-bg-inner">
-											<h2>17 Pictures of Medium Length Hair in Layers That Will Inspire Your New
-												Haircut</h2>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem neque
-												est mollitia! Beatae minima assumenda repellat harum vero, officiis
-												ipsam magnam obcaecati cumque maxime inventore repudiandae quidem
-												necessitatibus rem atque.</p>
+											<h2>Unleash Your Inner Chef</h2>
+											<p>Embark on a culinary adventure like never before! Discover a treasure trove of cooking tips, hacks, and delectable recipes curated to make you the master of your kitchen domain. Unleash your creativity and let the culinary magic unfold!</p>
 										</div>
 									</a>
 								</div>
 
 								<div class="swiper-slide">
-									<a href="single-post.html" class="img-bg d-flex align-items-end"
+									<a href="#" class="img-bg d-flex align-items-end"
 										style="background-image: url('assets/img/post-slide-3.jpg');">
 										<div class="img-bg-inner">
-											<h2>13 Amazing Poems from Shel Silverstein with Valuable Life Lessons</h2>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem neque
-												est mollitia! Beatae minima assumenda repellat harum vero, officiis
-												ipsam magnam obcaecati cumque maxime inventore repudiandae quidem
-												necessitatibus rem atque.</p>
+											<h2>Feast with Friends & Family</h2>
+											<p>Strengthen bonds and create lasting memories over a shared table. Our handcrafted recipes, designed for groups big and small, ensure that every meal becomes a heartwarming gathering filled with laughter, love, and, of course, scrumptious delights.</p>
 										</div>
 									</a>
 								</div>
 
 								<div class="swiper-slide">
-									<a href="single-post.html" class="img-bg d-flex align-items-end"
+									<a href="#" class="img-bg d-flex align-items-end"
 										style="background-image: url('assets/img/post-slide-4.jpg');">
 										<div class="img-bg-inner">
-											<h2>9 Half-up/half-down Hairstyles for Long and Medium Hair</h2>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem neque
-												est mollitia! Beatae minima assumenda repellat harum vero, officiis
-												ipsam magnam obcaecati cumque maxime inventore repudiandae quidem
-												necessitatibus rem atque.</p>
+											<h2>From Garden to Plate</h2>
+											<p>Taste the difference that locally-sourced, organic produce makes. Indulge in a symphony of colors and flavors as we bring you the finest ingredients straight from the garden to your plate. Elevate your dining experience with our nature-inspired delicacies.</p>
+										</div>
+									</a>
+								</div>
+
+								<div class="swiper-slide">
+									<a href="#" class="img-bg d-flex align-items-end"
+										style="background-image: url('assets/img/post-slide-5.jpg');">
+										<div class="img-bg-inner">
+											<h2>Eating Healthy, Tasting Happiness</h2>
+											<p>Let food be thy medicine! Discover a world of wholesome, nutrient-packed recipes that nourish your body and uplift your spirit. Our commitment to a healthy and happy you is showcased in every mouthwatering dish we serve. Embrace wellness with every delectable choice!</p>
 										</div>
 									</a>
 								</div>
@@ -90,11 +87,10 @@
 									if (locals.categories) { 
 										categories.forEach((item)=>{
 								%>
-									<li><a href="categories/:<%= item.categoryName %>"><i class="bi bi-chevron-right"></i> <%= item.categoryName %></a></li>
+									<li><a href="categories/<%= item.categoryName %>"><i class="bi bi-chevron-right"></i> <%= item.categoryName %></a></li>
 								<% }) }else{ %>
 									<p class="text-secondary">No products to display</p>
 								<% } %>
-								
 							</ul>
 						</div>
 					</div>
