--- a/views/public/includes/header.ejs
+++ b/views/public/includes/header.ejs
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <!-- <link href="../assets/img/favicon.png" rel="icon"> -->
+  <link rel="shortcut icon" type="image/png" href="../assets/img/logo.png" />
   <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
